# DeskMate

./: CLAUDE.md  LICENSE  README.en.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.zh.md  install.ps1  install.sh
docs/: completion-notification-redesign.md
extensions/cursor/: README.md  extension.js  package.json
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  DemoMascot.tsx  Mini.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs
frontend/src/components/: CharacterTab.tsx  ClaudeStatsView.tsx  CompletionToast.tsx  MiniPetMascot.tsx  PetPicker.tsx  SettingsTab.tsx
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en.json  es.json  fr.json  ja.json  ko.json  zh.json
website/: astro.config.mjs  package-lock.json  package.json
website/public/: robots.txt
website/public/update/: latest.json
website/src/components/: Footer.astro  Hero.astro  MacbookMockup.astro  Nav.astro
website/src/i18n/: index.ts
website/src/layouts/: Base.astro
